<resources>
    <string name="app_name">File Master</string>
    <string name="quick_access">Quick Access</string>
    <string name="expand">Expand</string>
    <string name="narrow">Narrow</string>
    <string name="recents">Recents</string>
    <string name="files">Files</string>
    <string name="cleaner">Cleaner</string>
    <string name="menu">Menu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more">More</string>
    <string name="search">Search</string>
    <string name="discover_premium">Discover Premium</string>
    <string name="storage">Storage</string>
    <string name="capacity_storage">30GB / 128GB</string>
    <string name="drive">Google Storage</string>
    <string name="percent">65% USED</string>
    <string name="afile_master">AFile Master</string>
    <string name="home_container_premium_subtitle">Subscribe to unlock premium features</string>
    <string name="home_premium_text_btn">Premium</string>
    <string name="permission_message_android_11">"Allow access to your files so %s can help you quickly manage your files and more"</string>
    <string name="description_read_external_storage">We need the Storage Permission to access your file. Please click Go Settings bellow and active Storage under Storage permission</string>
    <string name="allow_permission">Allow</string>
    <string name="cancel_permission">Cancel</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="go_setting">Go Settings</string>
    <string name="no_access_file">You can access files quickly from here by \"Add To Quick Access\"</string>
    <string name="file_insight_fragment">File insight fragment</string>
    <string name="move_to">Move to</string>
    <string name="copy_to">Copy to</string>
    <string name="share">Share</string>
    <string name="trash">Trash</string>
    <string name="open_with">Open with</string>
    <string name="rename">Rename</string>
    <string name="compress">Compress</string>
    <string name="extract">Extract</string>
    <string name="move_to_safe">Move to safe</string>
    <string name="add_to_workspace">Add to workspace</string>
    <string name="add_to_quick_access">Add to quick access</string>
    <string name="upload_to_cloud">Upload to cloud</string>
    <string name="back_to_exit_app">Back again to exit</string>
    <string name="google_drive">Google Drive</string>
    <string name="sync">Sync</string>
    <string name="not_sync">Not Sync</string>
    <string name="about">About</string>
    <string name="check_for_update">Check for update</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="acknowled">Acknowledgements</string>
    <string name="license">License</string>
    <string name="version">v1.0.0</string>
    <string name="setting">Settings</string>
    <string name="show_hiden_files">Show hidden files</string>
    <string name="language">Language</string>
    <string name="language_en">English (US)</string>
    <string name="customize">Customize my files home</string>
    <string name="built_app">Built-in app</string>
    <string name="show_recent_files">Show recent files</string>
    <string name="use_quick_access">Use quick access</string>
    <string name="browser_manager">Browser manager</string>
    <string name="images_viewer">Image viewer</string>
    <string name="video_player">Video player</string>
    <string name="music_player">Music player</string>
    <string name="text_editor">Text editor</string>
    <string name="user_name">Chu Pi</string>
    <string name="share_file_to_mobile">Share file to mobile</string>
    <string name="file_transfer_pc">File transfer to PC</string>
    <string name="app_manager">App Manager</string>
    <string name="this_is_paragraph">This is paragraph</string>
    <string name="censored">Censored</string>
    <string name="rate_us">Rate us</string>
    <string name="feed_back">Feedback</string>
    <string name="more_by_insoft">More by innosoft</string>
    <string name="choose_language">Choose language</string>
    <string name="ok">ok</string>
    <string name="vi" translatable="false">Tiếng Việt</string>
    <string name="en">English (US)</string>
    <string name="indo">Indochina</string>
    <string name="cloud">Cloud</string>
    <string name="empty_drive_desc">Not sync any drive cloud. Add an account for the best experience</string>
    <string name="add_drive">Add more drive cloud</string>
    <string name="today">Today</string>
    <string name="this_week">This week</string>
    <string name="no_result_found">No result found</string>
</resources>
