<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.tapon.ds.view.toolbar.Toolbar
            android:id="@+id/toolbar_about"
            android:layout_width="0dp"
            android:layout_height="?android:attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:toolbarTitle="@string/setting"
            app:toolbarViewStyle="backTitleIcon" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constan_show_recent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_about">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/show_recent"
                style="@style/Paragraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/px16"
                android:layout_marginTop="@dimen/px12"
                android:layout_marginEnd="@dimen/px12"
                android:layout_marginBottom="@dimen/px12"
                android:checked="true"
                android:text="@string/show_recent_files"
                android:textColor="@color/label_prim"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:thumbTint="@color/brand"
                app:trackTint="@color/brand_400" />


        </androidx.constraintlayout.widget.ConstraintLayout>




        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constan_quick_access"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/constan_show_recent">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/quick_access"
                style="@style/Paragraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/px16"
                android:layout_marginTop="@dimen/px12"
                android:layout_marginEnd="@dimen/px12"
                android:layout_marginBottom="@dimen/px12"
                android:checked="true"
                android:text="@string/use_quick_access"
                android:textColor="@color/label_prim"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:thumbTint="@color/brand"
                app:trackTint="@color/brand_400" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/constan_quick_access">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Paragraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/px16"
                android:layout_marginTop="@dimen/px12"
                android:layout_marginBottom="@dimen/px12"
                android:text="@string/browser_manager"
                android:textColor="@color/label_prim"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
