<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.tapon.ds.view.toolbar.Toolbar
            android:id="@+id/toolbar_about"
            android:layout_width="0dp"
            android:layout_height="?android:attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:toolbarTitle="@string/recents"
            app:toolbarViewStyle="backTitleIcon" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px40"
            android:src="@drawable/ic_app"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_about" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px24"
            android:src="@drawable/ic_logo_about"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon_app" />

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/border_1px"
            android:layout_marginTop="@dimen/px42"
            android:background="@color/divider"
            app:layout_constraintTop_toBottomOf="@+id/logo_about" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/check_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/view_line">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Paragraph"
                android:layout_width="389dp"
                android:layout_height="38dp"
                android:layout_marginStart="@dimen/px16"
                android:layout_marginTop="@dimen/px12"
                android:layout_marginBottom="@dimen/px12"
                android:text="@string/check_for_update"
                android:textColor="@color/label_prim"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/version"
                style="@style/Paragraph2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/px12"
                android:text="@string/version"
                android:textColor="@color/label_sec"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/check_update">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Paragraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/px16"
                android:layout_marginTop="@dimen/px12"
                android:layout_marginBottom="@dimen/px12"
                android:text="@string/privacy_policy"
                android:textColor="@color/label_prim"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/check_update">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Paragraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/px16"
                android:layout_marginTop="@dimen/px12"
                android:layout_marginBottom="@dimen/px12"
                android:text="@string/privacy_policy"
                android:textColor="@color/label_prim"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/acknow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/privacy">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Paragraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/px16"
                android:layout_marginTop="@dimen/px12"
                android:layout_marginBottom="@dimen/px12"
                android:text="@string/acknowled"
                android:textColor="@color/label_prim"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/acknow">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Paragraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/px16"
                android:layout_marginTop="@dimen/px12"
                android:layout_marginBottom="@dimen/px12"
                android:text="@string/license"
                android:textColor="@color/label_prim"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
