<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constan_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/px16"
            android:layout_marginTop="@dimen/px12"
            android:layout_marginEnd="@dimen/px40"
            android:layout_marginBottom="@dimen/px12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_close"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/Subheading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/built_app"
                android:textColor="@color/label_prim"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/border_1px"
            android:layout_marginTop="@dimen/px12"
            android:background="@color/divider"
            app:layout_constraintTop_toBottomOf="@+id/constan_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constan_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/view_line">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/img_viewer"
                style="@style/Paragraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/px16"
                android:layout_marginTop="@dimen/px12"
                android:layout_marginEnd="@dimen/px12"
                android:layout_marginBottom="@dimen/px12"
                android:checked="true"
                android:text="@string/images_viewer"
                android:textColor="@color/label_prim"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:thumbTint="@color/brand"
                app:trackTint="@color/brand_400" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constan_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/constan_img">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/video_player"
                style="@style/Paragraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/px16"
                android:layout_marginTop="@dimen/px12"
                android:layout_marginEnd="@dimen/px12"
                android:layout_marginBottom="@dimen/px12"
                android:checked="true"
                android:text="@string/video_player"
                android:textColor="@color/label_prim"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:thumbTint="@color/brand"
                app:trackTint="@color/brand_400" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constan_music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/constan_video">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/music_player"
                style="@style/Paragraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/px16"
                android:layout_marginTop="@dimen/px12"
                android:layout_marginEnd="@dimen/px12"
                android:layout_marginBottom="@dimen/px12"
                android:checked="true"
                android:text="@string/music_player"
                android:textColor="@color/label_prim"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:thumbTint="@color/brand"
                app:trackTint="@color/brand_400" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constan_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/constan_music">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/text_editor"
                style="@style/Paragraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/px16"
                android:layout_marginTop="@dimen/px12"
                android:layout_marginEnd="@dimen/px12"
                android:layout_marginBottom="@dimen/px12"
                android:checked="true"
                android:text="@string/text_editor"
                android:textColor="@color/label_prim"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:thumbTint="@color/brand"
                app:trackTint="@color/brand_400" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>